fix contrast bugs

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /* Root element styles */
 html {
-  font: normal small-caps 40 30px/1.5 "Arial", sans-serif;  
+  font: normal small-caps 20px/1.5 "Arial", sans-serif;  
   background-color: #0055A4;
   color: #FFFFFF;
 }
@@ -22,7 +22,7 @@ header h1 {
 
 footer {
   font-size: 0.8rem;
-  background: linear-gradient(to right, #EF4135, #EF4135,#ef4135);
+  background: linear-gradient(to right, #C8102E, #C8102E,#C8102E);
   color: #fff;
   text-align: center;
 }
@@ -78,7 +78,7 @@ figcaption {
   font-style: italic;
   font-weight: bold;
   font-family: "Arial", sans-serif;
-  color: #FFFFFF;
+  color: #0055A4;
 }
 
 img {
@@ -103,12 +103,12 @@ aside ul {
 
 aside ul li a {
   text-decoration: none;
-  color: #007bff;
+  color: #FFFFFF;
   line-height: 1.8;
 }
 
 aside ul li a:hover {
-  color: #0056b3;
+  color: #0055A4;
 }
 
 /* Form styles */
